<resources>
    <string name="app_name">MovieApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeTitle">Explore Movie and watch it now!</string>
    <string name="title">Title</string>
    <string name="movie_title">Movie Title</string>
    <string name="icon_popularity">Icon Popularity</string>
    <string name="dummyNumber">1234.456</string>
    <string name="dummyRating">9.3 (1000 Vote)</string>
    <string name="release_date">Release date</string>
    <string name="dummyDate">2023-05-01</string>
    <string name="synopsis">Synopsis</string>
    <string name="dummySynopsis">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="reviews">Reviews</string>
    <string name="dummyName">Jennifer Abigail</string>
    <string name="dummyContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="dummyInitials">JA</string>
</resources>