<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".presentation.movie_details.MovieDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view"
            android:layout_width="match_parent"
            android:layout_height="400dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:text="@string/title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                app:tint="@color/text"
                android:src="@drawable/ic_popularity"
                android:contentDescription="@string/icon_popularity" />

            <TextView
                android:id="@+id/popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/text"
                android:layout_marginStart="5dp"
                android:text="@string/dummyNumber"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:tint="@color/text"
                android:src="@drawable/ic_star"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/icon_popularity" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummyRating"
                android:textColor="@color/text"
                android:textSize="15sp"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:text="@string/release_date"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummyDate"
            android:textColor="@color/text"
            android:textSize="15sp"
            android:layout_marginTop="13dp"
            android:layout_marginStart="20dp"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:text="@string/synopsis"/>

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummySynopsis"
            android:textColor="@color/text"
            android:textSize="15sp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:text="@string/reviews"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            tools:listitem="@layout/item_movie_review"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>