<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_initials">

        <TextView
            android:id="@+id/initials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/dummyInitials"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:text="@string/dummyName"/>

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:layout_marginStart="20dp"
            android:textColor="@color/text"
            android:text="@string/dummyContent"/>

    </LinearLayout>

</LinearLayout>